# Skeleton

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: progressCircle.css  progressCircle.js  setup.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
